--- a/webDemo/src/base.css
+++ b/webDemo/src/base.css
@@ -6,7 +6,10 @@ html {
   font-size: 62.5%; /* =10px and will allow for all rem sizing to be easier, 1.4 rem => 14px*/
   color: #30323F;
 };
-html, *, ::after, ::before {
+html, *, ::after, ::before, div {
+  box-sizing: border-box;
+}
+div {
   box-sizing: border-box;
 }
 body {
