--- a/webDemo/src/base.css
+++ b/webDemo/src/base.css
@@ -5,8 +5,8 @@ html {
   Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 62.5%; /* =10px and will allow for all rem sizing to be easier, 1.4 rem => 14px*/
   color: #30323F;
-};
-html, *, ::after, ::before, div {
+}
+html, *, ::after, ::before {
   box-sizing: border-box;
 }
 div {
