--- a/webDemo/src/base.css
+++ b/webDemo/src/base.css
@@ -5,6 +5,8 @@ html {
   Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 62.5%; /* =10px and will allow for all rem sizing to be easier, 1.4 rem => 14px*/
   color: #30323F;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 html, *, ::after, ::before {
   box-sizing: border-box;
@@ -20,6 +22,8 @@ body {
   background: #F5F7FD;
   line-height: 2rem;
   margin: 0;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 a {
   color: #3923A9;
