--- a/webDemo/src/base.css
+++ b/webDemo/src/base.css
@@ -25,6 +25,7 @@ body {
   background: #222222;
   background-repeat: no-repeat;
   background-image: url("/public/img/header-bg.webp");
+  background-size: cover;
   line-height: 2rem;
   margin: 0;
   max-width: 100%;
